k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-support-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: it-support
  template:
    metadata:
      labels:
        app: it-support
    spec:
      containers:
      - name: app
        image: acrcarlos69lm.azurecr.io/app-pro:tmp
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
