k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-support-service
spec:
  selector:
    app: it-support
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
