k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-support-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing # O nginx si usas ese controller
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: it-support-service
            port:
              number: 80
